[metadata]
name = sage-broccoliqn
version = 0.1.1
description = Package for scRNAseq analysis from A-Z with detailed examples and explanation.
long_description = file: README.md
long_description_content_type = text/markdown
author = Quang Nguyen
author_email = quang.n.nguyen@alumni.duke.edu
license = MIT
url = https://github.com/denvercal1234GitHub/sage-broccoliqn
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Bio-Informatics

[options]
packages = find:
package_dir =
    = src
include_package_data = True
install_requires =
    anndata>=0.9
    pandas
    numpy
    scipy
python_requires = >=3.8

[options.packages.find]
where = src
